--- a/app/views/enrollments/_form.html.haml
+++ b/app/views/enrollments/_form.html.haml
@@ -7,5 +7,5 @@
     = f.input :rating, collection:["1","2","3","4","5"]
     = f.input :review
 
-  .form-actions
-    = f.button :submit
+  .form-actions.text-end.py-2
+    = f.button :submit, "Post Rating"
