--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ 
  */
  @import "./actiontext.scss";
 
@@ -157,7 +158,7 @@
  /* for lessons show page */
  .black-bg-section{
     
-   
+ 
     position: absolute;
     width:100%;    
     height:400px;
@@ -166,7 +167,7 @@
  }
  .main-content{
      position: relative;
-     z-index: 999;
+     
  }
  
  .content-section{
@@ -269,3 +270,60 @@
  .font-18{
      font-size: 17px !important;
  }
+
+.no-text-decoration a{
+    text-decoration: none !important;
+}
+.lessons-show{
+    list-style-type: none !important;
+    margin-block-start: 0 !important;
+    margin-block-end: 0 !important;
+    margin-inline-start: 0px !important;
+    margin-inline-end: 0px !important;
+    padding-inline-start: 0 !important;
+}
+.sticky-top-gap{
+    position: sticky !important;
+    top: 3% !important;
+    z-index: 1020 !important;
+}
+.course-intro-section{
+    position: fixed;
+    top:0;
+    background-color: #1c1d1f;
+    width:100%;
+      z-index: 99;
+
+}
+.mt-m5{
+    margin-top:-30px !important
+}
+.navbar{
+    z-index: 999 !important;
+}
+.w-50per{
+    width:50%  !important
+}
+.dates-font{
+    font-size: 11px;
+    font-weight: 500;
+}
+
+.lesson-actions{
+    width:20%
+}
+.lesson-content {
+    width:100%
+}
+.stripe-button-el span{
+    height: 38px  !important;
+    line-height: 38px !important;
+    width: 295px !important
+}
+.flash-msg{
+    position:fixed !important;
+    top: 2%!important;
+    width:700px;
+    right:1% !important;
+    z-index: 99999;
+}
