--- a/app/views/active_storage/blobs/_blob.html.haml
+++ b/app/views/active_storage/blobs/_blob.html.haml
@@ -12,6 +12,7 @@
     - if caption = blob.try(:caption)
       = caption
     - else
-      %span.attachment__name= blob.filename
-      %span.attachment__size= number_to_human_size blob.byte_size
-= link_to blob.filename, rails_blob_path(blob, disposition:"attachment"), target: :_blank
+      = link_to rails_blob_path(blob, disposition:"attachment"), target: :_blank do
+        %span.attachment__name= blob.filename
+        %span.attachment__size= number_to_human_size blob.byte_size
+-# 
