--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -5,30 +5,43 @@
 
 .custom-conteiner.mt-3
   -if @courses.empty?
-    %h4.fw-bold Sorry, we couldn't find any results
-    %h5.fw-bold.mt-4 Try adjusting your search. Here are some ideas:
-    %ul.py-3
-      %li Make sure all words are spelled correctly
-      %li Try different search terms
-      %li Try more general search terms
+    %div.text-center
+      %h4.fw-bold Sorry, we couldn't find any results
+      %h5.fw-bold.mt-4 Try adjusting your search. Here are some ideas:
+      %span.py-3
+        %div Make sure all words are spelled correctly
+        %div Try different search terms
+        %div Try more general search terms
+        = link_to 'Go Back ', :back, class:"btn btn-dark px-3 my-3"
   - else
-    %div.h4.fw-bold= action_name.humanize
+    %div.h4.fw-bold.py-2.text-center= "#{action_name.humanize} Courses"
     .row
       .col-2 
         = search_form_for @ransack_courses, as: :courses_search, url: @ransack_path do |f|   
-          =f.search_field :title_cont, class:"form-control", placeholder:"Title" 
-          -# =f.select :language_cont, Course.languages , include_blank:true    
-          =f.select :level_cont, Course.levels, include_blank:true 
-          -# =f.collection_check_boxes :level_cont, Course.levels, :level_cont, :level_cont
-          =f.select :language_cont, Course.languages, include_blank:true               
-          =f.search_field :user_email_cont, class:"form-control", placeholder:"User"
-          = sort_link(@ransack_courses, :price) 
-          = sort_link(@ransack_courses, :average_rating, "Top Rated") 
-          = sort_link(@ransack_courses, :created_at, "Latest") 
-          = sort_link(@ransack_courses, :enrollments_count, "Popular") 
+          =f.search_field :title_cont, class:"form-control", placeholder:"Title"    
+          =f.select :level_cont, Course.levels,class:"form-select", include_blank:true 
+          =f.select :language_cont, Course.languages, include_blank:true, class:"form-select"  
+          .row.mt-2
+            .col-6=f.submit
+            .col-6= link_to "Refresh", @ransack_path, class:"btn btn-light btn-sm"
+          %hr             
+          -# =f.search_field :user_email_cont, class:"form-control", placeholder:"User"
+          .h6.mt-4.mb-1.border-bottom Sort Courses
+          .row.mb-2= sort_link(@ransack_courses, :price) 
+          .row.mb-2= sort_link(@ransack_courses, :average_rating, "Top Rated") 
+          .row.mb-2= sort_link(@ransack_courses, :created_at, "Latest") 
+          .row.mb-2= sort_link(@ransack_courses, :enrollments_count, "Popular") 
+          %hr
+
+          .h6.mt-4.mb-1.border-bottom Categories
+          - @tags.each do |tag|
+            = link_to controller: controller_name, action: action_name, courses_search: { course_tags_tag_id_eq: tag.id } do
+              .badge.bg-dark
+                = tag.name
+                %span= tag.course_tags_count
           
-          =f.submit
-        = link_to "Refresh", @ransack_path
+         
+        
       .col-10
         .row 
           
