--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,26 +1,24 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :email, required: true, autofocus: true
-    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+.container.py-3 
+  .card 
+    .card-header
+      %h4 Update Profile 
+    .card-body       
+      = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+        = f.error_notification
+        .form-inputs
+          = f.input :email, required: true, autofocus: true
+          - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+            %p
+              Currently waiting confirmation for: #{resource.unconfirmed_email}
+          = f.input :password,hint: "leave it blank if you don't want to change it",required: false,input_html: { autocomplete: "new-password" }           
+          = f.input :password_confirmation,required: false, input_html: { autocomplete: "new-password" } 
+          = f.input :current_password, hint: "we need your current password to confirm your changes", required: true,  
+            input_html: { autocomplete: "current-password" }    
+        .form-actions.text-end.py-2
+          = f.button :submit, "Update Profile"
+      %h5 Cancel my account
       %p
-        Currently waiting confirmation for: #{resource.unconfirmed_email}
-    = f.input :password,                                     |
-      hint: "leave it blank if you don't want to change it", |
-      required: false,                                       |
-      input_html: { autocomplete: "new-password" }           |
-    = f.input :password_confirmation,              |
-      required: false,                             |
-      input_html: { autocomplete: "new-password" } |
-    = f.input :current_password,                                     |
-      hint: "we need your current password to confirm your changes", |
-      required: true,                                                |
-      input_html: { autocomplete: "current-password" }               |
-  .form-actions
-    = f.button :submit, "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+        Unhappy? #{link_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
+      = link_to :back, class:"btn btn-dark btn-sm px-2" do 
+        .fa.fa-arrow-left
+        %span.ms-1 Back
