--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -8,8 +8,7 @@
 .container.my-4
   .row
     .col-8
-      .shadow.px-3.py-3.border.rounded
-        .h5.fw-bold.py-2= @lesson.title 
+      .shadow.border.rounded        
         - if @lesson.video.attached?
           %video(controls="true" poster="#{url_for @lesson.video_thumbnail}" width="100%" preload="metadata" controlslist="nodownload" )
             %source{src:rails_blob_url(@lesson.video), type:"#{@lesson.video.content_type}"}
@@ -18,22 +17,45 @@
           -# = content_tag :video, id:'my-video' do 
           -#   = tag :source, src: url_for(@lesson.video), type:"#{@lesson.video.content_type}"
           - if policy(@lesson).edit?
-            = link_to "Remove video", delete_video_course_lesson_path(@course,@lesson), method: :delete, data: {confirm:"Are you sure"}
+            -# = link_to "Remove video", delete_video_course_lesson_path(@course,@lesson), method: :delete, data: {confirm:"Are you sure"}
+        .container-fluid
+          .h4.fw-bold.py-2= @lesson.title 
+          .d-flex
+            .h6 From the course:
+            %h5.ms-2= link_to @course.title, course_path(@course), class:"text-decoration-none"         
+         
+          .row.py-3
+            .col-6
+              - unless @lesson.prev.nil?
+                = link_to  course_lesson_path(@course,@lesson.prev), class:"btn btn-dark btn-sm px-2" do
+                  .fa.fa-arrow-left 
+                  %span.ms-1 Previous  
+
+            .col-6.d-flex.justify-content-end
+              - unless @lesson.next.nil?
+                = link_to course_lesson_path(@course,@lesson.next), class:"btn btn-dark btn-sm px-2" do 
+                  .fa.fa-arrow-right 
+                  %span.ms-1 Next
+      - if @lesson.content.present?
+        %div.h4.mt-4 Description 
         = @lesson.content
         %hr
-        .row
-          .col-6
-            - unless @lesson.prev.nil?
-              = link_to "Previous", course_lesson_path(@course,@lesson.prev)        
-          .col-6.d-flex.justify-content-end
-            - unless @lesson.next.nil?
-              = link_to "Next", course_lesson_path(@course,@lesson.next)
-        %hr
-        - @comments.each do |comment|
-          = render "lessons/comments/comment", comment: comment
-        .row 
-          = render "lessons/comments/form"
+      .h4.mt-4 Comments
+      = render "lessons/comments/form"
+      .fw-bold= pluralize(@lesson.comments_count, "Comment")
+      
+      - @lesson.comments.order(created_at: :desc).each do |comment|
+        .row  
+          .col-12 
+            = render "lessons/comments/comment", comment: comment
+        
     .col-4
+      - if policy(@course).owner?
+        .d-grid.gap-2
+          = link_to  new_course_lesson_path(@course, @lesson), class:"btn btn-outline-success px-3 mb-3 ms-2 py-2" do 
+            .fa.fa-plus
+            %span.ms-1 Add New Lesson
+
       - @lessons.each do |lesson|
         = render "lessons/lesson_preview", lesson: lesson
 
