--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -88,5 +88,5 @@
     .width-30.my-auto.ps-5.ms-4
       .h2.fw-bolder Become an instructor
       .h5 Top instructors from around the world teach millions of students on Udemy. We provide the tools and skills to teach what you love. 
-      .btn.btn-dark.fw-bold.py-2.mt-3 Start teaching today
+      = link_to "Start teaching today", new_course_path, class:"btn btn-dark fw-bold py-2 mt-3"
       
